--- a/package.json
+++ b/package.json
@@ -21,5 +21,9 @@
   },
   "devDependencies": {
     "nodemon": "^1.18.4"
-  }
+  },
+  "engines": {
+    "node": "10.11.0",
+    "npm": "6.4.1"
+  },
 }
